data/derived/comb/progs/unify/prog6949.ml.out
Characters 111-121:
  else (test (f x), false)
        ^^^^^^^^^^
Error: This expression has type int * bool
       but an expression was expected of type int
